[develop-api] presentation on dashboard

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 APP_URL=<your public app url>
 PORT=8000
+DB_PORT=
 DB_HOST=localhost
 DB_DATABASE=
 DB_USERNAME=
@@ -7,4 +8,3 @@ DB_PASSWORD=
 SHOPIFY_API_KEY=
 SHOPIFY_API_SECRET=
 SHOPIFY_SCOPES=
-
