--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run server-dev\" \"npm run react-dev",
+    "dev": "concurrently \"npm run server-dev\" \"npm run react-dev\"" ,
     "server-dev": "nodemon --exec babel-node ./server && npm run react-dev",
     "react-dev": "webpack --mode development --watch",
     "react-build": "webpack --mode production",
@@ -22,7 +22,6 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bookshelf": "^1.2.0",
-    "concurrently": "^6.2.0",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -45,7 +44,9 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "concurrently": "^6.2.0",
     "css-loader": "^5.2.6",
+    "nodemon": "^2.0.9",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
